Add tuples of game score data instead of strings

--- a/experiments/eda-and-preprocessing.ipynb
+++ b/experiments/eda-and-preprocessing.ipynb
@@ -5,7 +5,7 @@
    "id": "07a1fe15",
    "metadata": {},
    "source": [
-    "General imports\n",
+    "## General imports\n",
     "- pandas\n",
     "- numpy"
    ]
@@ -675,51 +675,65 @@
    "execution_count": 12,
    "id": "c7f3a0ba",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/mm/sqhjkg9d231_0cx36_kt95dr0000gn/T/ipykernel_33323/1696901499.py:25: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  df_subset[\"Game Scores\"] = df_subset[\"Game Scores\"].apply(convert_to_game_score).apply(convert_to_score_array)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Clean up game scores\n",
     "import datetime\n",
-    "\n",
-    "# Convert timestamp to game score\n",
-    "def convert_to_game_score(val):\n",
-    "    # Check for timestamp\n",
-    "    if type(val) == datetime.datetime:\n",
-    "        val = pd.Timestamp(val)\n",
-    "        # Extract month and date\n",
-    "        month = val.month\n",
-    "        day = val.day\n",
-    "        result = str(month) + \"-\" + str(day)\n",
-    "        return result\n",
-    "    else:\n",
-    "        return val\n",
     "\n",
     "# Convert into array of scores\n",
     "def convert_to_score_array(val):\n",
     "    # Split by space and append to array\n",
     "    arr = []\n",
-    "    for score in val.split(\", \"):\n",
-    "        arr.append(score)\n",
+    "    if type(val) == str:\n",
+    "        for score in val.split(\", \"):\n",
+    "            arr.append(score)\n",
+    "    elif type(val) == datetime.datetime:\n",
+    "        arr.append(val)\n",
     "    return arr\n",
     "\n",
-    "df_subset[\"Game Scores\"] = df_subset[\"Game Scores\"].apply(convert_to_game_score).apply(convert_to_score_array)"
+    "# Convert timestamp to game score\n",
+    "def convert_to_game_score(values):\n",
+    "    temp = []\n",
+    "    for val in values:\n",
+    "        if type(val) == datetime.datetime:\n",
+    "            val = pd.Timestamp(val)\n",
+    "            # Extract month and date\n",
+    "            month = val.month\n",
+    "            day = val.day\n",
+    "            temp.append((int(month), int(day)))\n",
+    "        elif type(val) == str:\n",
+    "            a, b = val.split(\"-\")\n",
+    "            temp.append((int(a), int(b)))\n",
+    "            \n",
+    "    return temp"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 13,
+   "id": "ff1aec5c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/mm/sqhjkg9d231_0cx36_kt95dr0000gn/T/ipykernel_39477/3304639202.py:1: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  df_subset[\"Game Scores\"] = df_subset[\"Game Scores\"].apply(convert_to_score_array).apply(convert_to_game_score)\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_subset[\"Game Scores\"] = df_subset[\"Game Scores\"].apply(convert_to_score_array).apply(convert_to_game_score)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "id": "b4d37b98",
    "metadata": {},
    "outputs": [
@@ -753,7 +767,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "d414b41e",
    "metadata": {},
    "outputs": [
@@ -766,7 +780,7 @@
       "3 unique Player B1 genders\n",
       "3 unique Player B2 genders\n",
       "3 unique genders\n",
-      "{nan, 'male', 'female'}\n"
+      "{nan, 'female', 'male'}\n"
      ]
     }
    ],
@@ -789,7 +803,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "64740f3f",
    "metadata": {},
    "outputs": [
@@ -797,22 +811,22 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/mm/sqhjkg9d231_0cx36_kt95dr0000gn/T/ipykernel_33323/1474478728.py:3: SettingWithCopyWarning: \n",
+      "/var/folders/mm/sqhjkg9d231_0cx36_kt95dr0000gn/T/ipykernel_39477/1474478728.py:3: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  df_subset[\"Player A1 Gender\"].fillna(\"unspecified\", inplace=True)\n",
-      "/var/folders/mm/sqhjkg9d231_0cx36_kt95dr0000gn/T/ipykernel_33323/1474478728.py:4: SettingWithCopyWarning: \n",
+      "/var/folders/mm/sqhjkg9d231_0cx36_kt95dr0000gn/T/ipykernel_39477/1474478728.py:4: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  df_subset[\"Player A2 Gender\"].fillna(\"unspecified\", inplace=True)\n",
-      "/var/folders/mm/sqhjkg9d231_0cx36_kt95dr0000gn/T/ipykernel_33323/1474478728.py:5: SettingWithCopyWarning: \n",
+      "/var/folders/mm/sqhjkg9d231_0cx36_kt95dr0000gn/T/ipykernel_39477/1474478728.py:5: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  df_subset[\"Player B1 Gender\"].fillna(\"unspecified\", inplace=True)\n",
-      "/var/folders/mm/sqhjkg9d231_0cx36_kt95dr0000gn/T/ipykernel_33323/1474478728.py:6: SettingWithCopyWarning: \n",
+      "/var/folders/mm/sqhjkg9d231_0cx36_kt95dr0000gn/T/ipykernel_39477/1474478728.py:6: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
@@ -831,7 +845,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "8f34033b",
    "metadata": {},
    "outputs": [
@@ -884,7 +898,7 @@
        "      <td>Club Match</td>\n",
        "      <td>Vancouver Racquets Club</td>\n",
        "      <td>Normal</td>\n",
-       "      <td>[3-0]</td>\n",
+       "      <td>[(3, 0)]</td>\n",
        "      <td>Brian Covernton</td>\n",
        "      <td>910021.0</td>\n",
        "      <td>male</td>\n",
@@ -905,7 +919,7 @@
        "      <td>Club Match</td>\n",
        "      <td>Vancouver Racquets Club</td>\n",
        "      <td>Normal</td>\n",
-       "      <td>[3-0]</td>\n",
+       "      <td>[(3, 0)]</td>\n",
        "      <td>Glen McNeil</td>\n",
        "      <td>910664.0</td>\n",
        "      <td>male</td>\n",
@@ -926,7 +940,7 @@
        "      <td>League</td>\n",
        "      <td>Vancouver Ladies Doubles League</td>\n",
        "      <td>Normal</td>\n",
-       "      <td>[1-3]</td>\n",
+       "      <td>[(1, 3)]</td>\n",
        "      <td>Jennifer Levey</td>\n",
        "      <td>1003723.0</td>\n",
        "      <td>female</td>\n",
@@ -947,7 +961,7 @@
        "      <td>League</td>\n",
        "      <td>Vancouver Ladies Doubles League</td>\n",
        "      <td>Normal</td>\n",
-       "      <td>[3-1]</td>\n",
+       "      <td>[(3, 1)]</td>\n",
        "      <td>Annette Johanson</td>\n",
        "      <td>1002878.0</td>\n",
        "      <td>female</td>\n",
@@ -968,7 +982,7 @@
        "      <td>League</td>\n",
        "      <td>Vancouver Ladies Doubles League</td>\n",
        "      <td>Normal</td>\n",
-       "      <td>[3-0]</td>\n",
+       "      <td>[(3, 0)]</td>\n",
        "      <td>Melodie Flook</td>\n",
        "      <td>993592.0</td>\n",
        "      <td>female</td>\n",
@@ -1010,7 +1024,7 @@
        "      <td>Tournament</td>\n",
        "      <td>2018 Evergreen Club Championships</td>\n",
        "      <td>Normal</td>\n",
-       "      <td>[1-3]</td>\n",
+       "      <td>[(1, 3)]</td>\n",
        "      <td>Dana Merritt</td>\n",
        "      <td>1002955.0</td>\n",
        "      <td>female</td>\n",
@@ -1031,7 +1045,7 @@
        "      <td>Tournament</td>\n",
        "      <td>2018 Evergreen Club Championships</td>\n",
        "      <td>Normal</td>\n",
-       "      <td>[3-0]</td>\n",
+       "      <td>[(3, 0)]</td>\n",
        "      <td>Warren Woodman</td>\n",
        "      <td>1003063.0</td>\n",
        "      <td>male</td>\n",
@@ -1052,7 +1066,7 @@
        "      <td>Tournament</td>\n",
        "      <td>2018 Evergreen Club Championships</td>\n",
        "      <td>Normal</td>\n",
-       "      <td>[2-3]</td>\n",
+       "      <td>[(2, 3)]</td>\n",
        "      <td>Matthew McAdam</td>\n",
        "      <td>1002948.0</td>\n",
        "      <td>male</td>\n",
@@ -1073,7 +1087,7 @@
        "      <td>Club Match</td>\n",
        "      <td>Evergreen Squash Club</td>\n",
        "      <td>Normal</td>\n",
-       "      <td>[3-0]</td>\n",
+       "      <td>[(3, 0)]</td>\n",
        "      <td>Mike Lavigne</td>\n",
        "      <td>1002909.0</td>\n",
        "      <td>male</td>\n",
@@ -1094,7 +1108,7 @@
        "      <td>Club Match</td>\n",
        "      <td>Vancouver Racquets Club</td>\n",
        "      <td>Normal</td>\n",
-       "      <td>[3-2]</td>\n",
+       "      <td>[(3, 2)]</td>\n",
        "      <td>Dennis Forsman</td>\n",
        "      <td>1003716.0</td>\n",
        "      <td>male</td>\n",
@@ -1128,17 +1142,17 @@
        "1232 2018-04-01  doubles_squash  Club Match   \n",
        "\n",
        "                             Event Name Match Status Game Scores  \\\n",
-       "0               Vancouver Racquets Club       Normal       [3-0]   \n",
-       "1               Vancouver Racquets Club       Normal       [3-0]   \n",
-       "2       Vancouver Ladies Doubles League       Normal       [1-3]   \n",
-       "3       Vancouver Ladies Doubles League       Normal       [3-1]   \n",
-       "4       Vancouver Ladies Doubles League       Normal       [3-0]   \n",
+       "0               Vancouver Racquets Club       Normal    [(3, 0)]   \n",
+       "1               Vancouver Racquets Club       Normal    [(3, 0)]   \n",
+       "2       Vancouver Ladies Doubles League       Normal    [(1, 3)]   \n",
+       "3       Vancouver Ladies Doubles League       Normal    [(3, 1)]   \n",
+       "4       Vancouver Ladies Doubles League       Normal    [(3, 0)]   \n",
        "...                                 ...          ...         ...   \n",
-       "1228  2018 Evergreen Club Championships       Normal       [1-3]   \n",
-       "1229  2018 Evergreen Club Championships       Normal       [3-0]   \n",
-       "1230  2018 Evergreen Club Championships       Normal       [2-3]   \n",
-       "1231              Evergreen Squash Club       Normal       [3-0]   \n",
-       "1232            Vancouver Racquets Club       Normal       [3-2]   \n",
+       "1228  2018 Evergreen Club Championships       Normal    [(1, 3)]   \n",
+       "1229  2018 Evergreen Club Championships       Normal    [(3, 0)]   \n",
+       "1230  2018 Evergreen Club Championships       Normal    [(2, 3)]   \n",
+       "1231              Evergreen Squash Club       Normal    [(3, 0)]   \n",
+       "1232            Vancouver Racquets Club       Normal    [(3, 2)]   \n",
        "\n",
        "             Player A1  Player A1 Squash BC Number Player A1 Gender  \\\n",
        "0      Brian Covernton                    910021.0             male   \n",
@@ -1195,7 +1209,7 @@
        "[1233 rows x 18 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1206,7 +1220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "5cd4274f",
    "metadata": {},
    "outputs": [],
@@ -1216,7 +1230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "id": "8dcefe21",
    "metadata": {},
    "outputs": [],
