--- a/Elo_system.ipynb
+++ b/Elo_system.ipynb
@@ -930,7 +930,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 213,
    "metadata": {},
    "outputs": [
     {
@@ -969,11 +969,7 @@
     "# Evaluate the model\n",
     "y_pred = model.predict(X_test)\n",
     "accuracy = accuracy_score(y_test, y_pred)\n",
-    "print(\"Accuracy:\", accuracy)\n",
-    "\n",
-    "# Make predictions\n",
-    "# Assuming 'new_data_features' is the DataFrame containing new data with Elo rating columns\n",
-    "predictions = model.predict(new_data_features)"
+    "print(\"Accuracy:\", accuracy)"
    ]
   },
   {
