--- a/data_creation/Elo_system.ipynb
+++ b/data_creation/Elo_system.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 661,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -80,10 +80,20 @@
    ],
    "source": [
     "import pandas as pd\n",
+    "import os\n",
     "\n",
-    "df = pd.read_csv(r\"concatenated_data.csv\")\n",
+    "\n",
+    "current_directory = os.getcwd()\n",
+    "file_path = os.path.join(current_directory, r\"data\\concatenated_data.csv\")\n",
+    "\n",
+    "\n",
+    "df = pd.read_csv(file_path)\n",
+    "\n",
+    "\n",
     "\n",
     "# Remove entries where the \"Game Scores\" column is NaN\n",
+    "\n",
+    "\n",
     "df = df.dropna(subset=[\"Game Scores\"])\n",
     "\n",
     "\n",
@@ -92,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 662,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 663,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 664,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 665,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 666,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 667,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -263,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 668,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -323,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 669,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -334,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 670,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -405,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 671,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -467,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 672,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -569,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 673,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -598,7 +608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 674,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -656,7 +666,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 675,
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "player_stats = []\n",
+    "for player, elo in sorted_elo_ratings_event:\n",
+    "    (\n",
+    "        wins,\n",
+    "        losses,\n",
+    "        league_wins,\n",
+    "        league_losses,\n",
+    "        championship_wins,\n",
+    "        championship_losses,\n",
+    "    ) = check_res(player)\n",
+    "    player_stats.append(\n",
+    "        (player, elo, wins, losses, championship_wins, championship_losses)\n",
+    "    )\n",
+    "\n",
+    "# Create DataFrame for players\n",
+    "columns = [\n",
+    "    \"Player\",\n",
+    "    \"Elo\",\n",
+    "    \"Wins\",\n",
+    "    \"Losses\",\n",
+    "    \"Championship Wins\",\n",
+    "    \"Championship Losses\",\n",
+    "]\n",
+    "players_df = pd.DataFrame(player_stats, columns=columns)\n",
+    "\n",
+    "players_df[\"Rank\"] = (\n",
+    "    players_df[\"Elo\"].rank(ascending=False).astype(int)\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -723,7 +770,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 676,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -757,7 +804,7 @@
     "import pandas as pd\n",
     "\n",
     "# Load the CSV file into a pandas DataFrame\n",
-    "data = pd.read_csv(\"concatenated_data.csv\")\n",
+    "data = pd.read_csv(\"data/concatenated_data.csv\")\n",
     "\n",
     "# Get the unique entries in the \"Event Name\" column\n",
     "unique_event_names = data[\"Event Name\"].unique()\n",
@@ -770,7 +817,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 677,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -832,7 +879,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 678,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -887,7 +934,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 679,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -919,7 +966,7 @@
     "        elif wins_player_a < wins_player_b:\n",
     "            match_outcomes.append(0)  # Player B wins\n",
     "        else:\n",
-    "            match_outcomes.append(None)  # Draw\n",
+    "            match_outcomes.append(None)  # Drawge\n",
     "\n",
     "    # Add match outcomes as a new column to the DataFrame\n",
     "    df[\"Match Outcome\"] = match_outcomes\n",
@@ -934,7 +981,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 702,
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.metrics import accuracy_score, precision_score, recall_score\n",
+    "\n",
+    "\n",
+    "def train_ml_model(df):\n",
+    "    # Prepare the features (Elo ratings) and target variable (match outcomes)\n",
+    "    features = df[\n",
+    "        [\n",
+    "            \"Player A1 Elo Rating\",\n",
+    "            \"Player A2 Elo Rating\",\n",
+    "            \"Player B1 Elo Rating\",\n",
+    "            \"Player B2 Elo Rating\",\n",
+    "        ]\n",
+    "    ]\n",
+    "    target = df[\"Match Outcome\"]\n",
+    "\n",
+    "    # Split the data into training and testing sets\n",
+    "    X_train, X_test, y_train, y_test = train_test_split(\n",
+    "        features, target, test_size=0.2, random_state=44\n",
+    "    )\n",
+    "\n",
+    "    # Train the logistic regression model\n",
+    "    model = LogisticRegression()\n",
+    "    model.fit(X_train, y_train)\n",
+    "\n",
+    "    # Evaluate the model\n",
+    "    y_pred = model.predict(X_test)\n",
+    "    accuracy = accuracy_score(y_test, y_pred)\n",
+    "    precision = precision_score(y_test, y_pred)\n",
+    "    recall = recall_score(y_test, y_pred)\n",
+    "\n",
+    "    return model, accuracy, precision, recall"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = train_ml_model(df)[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -959,7 +1056,7 @@
     "        \"Player B2 Elo Rating\",\n",
     "    ]\n",
     "]\n",
-    "target = data_with_match_outcomes[\"Match Outcome\"]\n",
+    "target = df[\"Match Outcome\"]\n",
     "\n",
     "# Split the data into training and testing sets\n",
     "X_train, X_test, y_train, y_test = train_test_split(\n",
@@ -978,7 +1075,148 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 681,
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for player, elo in sorted_elo_ratings_event:\n",
+    "    (\n",
+    "        wins,\n",
+    "        losses,\n",
+    "        league_wins,\n",
+    "        league_losses,\n",
+    "        championship_wins,\n",
+    "        championship_losses,\n",
+    "    ) = check_res(player)\n",
+    "    player_stats.append(\n",
+    "        (player, elo, wins, losses, championship_wins, championship_losses)\n",
+    "    )\n",
+    "\n",
+    "# Create DataFrame for players\n",
+    "columns = [\n",
+    "    \"Player\",\n",
+    "    \"Elo\",\n",
+    "    \"Wins\",\n",
+    "    \"Losses\",\n",
+    "    \"Championship Wins\",\n",
+    "    \"Championship Losses\",\n",
+    "]\n",
+    "players_df = pd.DataFrame(player_stats, columns=columns)\n",
+    "\n",
+    "players_df[\"Rank\"] = (\n",
+    "    players_df[\"Elo\"].rank(ascending=False).astype(int)\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Player A1 Elo Rating</th>\n",
+       "      <th>Player A2 Elo Rating</th>\n",
+       "      <th>Player B1 Elo Rating</th>\n",
+       "      <th>Player B2 Elo Rating</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.939025</td>\n",
+       "      <td>-6.719594</td>\n",
+       "      <td>13.068145</td>\n",
+       "      <td>12.922218</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Player A1 Elo Rating  Player A2 Elo Rating  Player B1 Elo Rating  \\\n",
+       "0              0.939025             -6.719594             13.068145   \n",
+       "\n",
+       "   Player B2 Elo Rating  \n",
+       "0             12.922218  "
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def find_elo_ratings(players_df, player_names):\n",
+    "    # Initialize Elo ratings dictionary\n",
+    "    elo_ratings = {}\n",
+    "\n",
+    "    # Find Elo ratings for each player\n",
+    "    for name in player_names:\n",
+    "        player_info = players_df[players_df[\"Player\"] == name]\n",
+    "        elo_ratings[name] = player_info[\"Elo\"].values[0] if not player_info.empty else None\n",
+    "\n",
+    "    # Create DataFrame with Elo ratings for the given players\n",
+    "    elo_df = pd.DataFrame(\n",
+    "        [list(elo_ratings.values())],\n",
+    "        columns=[\n",
+    "            \"Player A1 Elo Rating\",\n",
+    "            \"Player A2 Elo Rating\",\n",
+    "            \"Player B1 Elo Rating\",\n",
+    "            \"Player B2 Elo Rating\",\n",
+    "        ],\n",
+    "    )\n",
+    "\n",
+    "    return elo_df\n",
+    "temp_df = find_elo_ratings(\n",
+    "    players_df,\n",
+    "    (\"Margaret Colbourne\", \"Jane McDonald\", \"Lauren Wagner\", \"Morgan Latremouille\"),\n",
+    ")\n",
+    "temp_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5420084132082708"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a.predict_proba(temp_df)[0][0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1029,14 +1267,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 683,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.683076923076923\n"
+      "Accuracy: 0.6584615384615384\n"
      ]
     }
    ],
